re PR middle-end/37103 (possible integer codegen bug)

PR middle-end/37103
	* fold-const.c (fold_widened_comparison): Do not allow
	sign changes that change the result even if shorter type
	is wider than arg1_unw's type.

	* gcc.c-torture/execute/20080813-1.c: New test.

From-SVN: r139094